# capra_arm_description

./: .gitignore  .gitmodules  README.md
capra_arm_description/: CMakeLists.txt  README.md  package.xml
capra_arm_description/launch/: test_launch.launch
capra_arm_description/urdf/: capra_arm.xacro  capra_arm_robotiq.urdf.xacro
capra_arm_moveit/: .setup_assistant  CMakeLists.txt  package.xml
capra_arm_moveit/config/: capra_arm_with_gripper.srdf  fake_controllers.yaml  joint_limits.yaml  ros_controllers.yaml
capra_arm_moveit/launch/: capra_arm_virtual_robot_demo.launch  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
launch/: test_launch.launch
meshes/: CA-03.stl  CA-05.stl  CA-07.stl
ovis_bringup/: CMakeLists.txt  package.xml
ovis_gazebo/: CMakeLists.txt  README.md  package.xml
ovis_jog_launch/: CMakeLists.txt  package.xml
ovis_manipulator_ikfast_plugin/: CMakeLists.txt  README.md  ovis_manipulator_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
ovis_moveit_config/: .gitignore  .setup_assistant  CMakeLists.txt  README.md  package.xml
urdf/: capra_arm.urdf.xacro  capra_arm.xacro  capra_arm_robotiq.urdf.xacro  capra_master_test.urdf.xacro
(+51 files in other folders)
