<?xml version="1.0"?>
<package>
  <name>capra_arm_description</name>
  <version>0.0.0</version>
  <description>CAPRA arm description package</description>

  <maintainer email="alex2603@live.ca">Alexandre Mongrain</maintainer>

  <license>TODO</license>

  <!-- <url type="website">https://github.com/clubcapra/capra_arm_description> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>robotiq_2f_140_gripper_visualization</run_depend>

  <export>
  </export>
</package>
